--- a/css/print/pdf.css
+++ b/css/print/pdf.css
@@ -72,7 +72,7 @@ a:visited {
 }
 
 .reveal pre code {
-	overflow: hidden !important;
+	/*overflow: hidden !important;*/
 	font-family: monospace !important;
 }
 
